# PUC

./: Everton_AI_01.ipynb  README.md  everton_ai_01.py
2024_AI_Everton/: Aula_10_Relatório_09_Construindo_uma_Rede_Neural_Convolucional_no_TensorFlow_2_0.ipynb  Everton_AI_01.ipynb  Everton_AI_02.ipynb  Everton_AI_03.ipynb  Everton_AI_04.ipynb  Everton_AI_05.ipynb  Everton_Aula_09_Laboratório_08_Construindo_uma_Rede_Neural_Artificial_no_TensorFlow_2_0.ipynb  Projeto2-CNN_Melanomas.ipynb  Projeto2.ipynb  Projeto_GPS_Cidades.ipynb  Projeto_GPS_Cidades.py  ReadMe.txt  RegiaoMetropolitanaCampinas.xlsx  Testador_Melanomas.py  TreinadorMelanoma.py  Vetor_ordenado_Modificado.ipynb  Vetor_ordenado_Modificado.py  Vetor_ordenado_Prof_Everton.ipynb  Vetor_ordenado_Prof_Everton.py  everton_ai_01.py  everton_ai_02.py  everton_ai_03.py  everton_ai_04.py  everton_ai_05.py
2025_Semaforo_Inteligente/: Build_na_mao.txt  CMakeLists.txt  README.md  contador  decisao  notas.md  semaforo  testa_comunicacao  testa_cuda
2025_Semaforo_Inteligente/arduinoIDE_firmware/arduinoIDE_firmware/: arduinoIDE_firmware.ino
2025_Semaforo_Inteligente/firmware_arduino/: Como_Configurar_no_Ubuntu.txt  platformio.ini
2025_Semaforo_Inteligente/firmware_arduino/src/: main.cpp  main.cpp.copy
2025_Semaforo_Inteligente/include/: contador.hpp
2025_Semaforo_Inteligente/src/: contador.cpp  contador_via_opencv.cpp  decisao.cpp  main.cpp  testa_comunicacao.cpp  testa_cuda.cpp
2025_Semaforo_Inteligente/src/Versoes_Anteriores/: contador.cpp  contador_antes_NMS.cpp  contador_old.cpp  contador_via_opencv_v2.cpp  contador_via_opencv_v3.cpp  main_antes_juncao_Arduino.cpp  main_quebrado.cpp
Drone/arduino_GPS/Q0122-Sketch/: Q0122-Sketch.ino
Drone/yolo_drone/: among.yaml  detectar_capturando_tela.py  detectar_pessoa.py  queimadas.yaml  train_among_v8.py
ML_IoT/: Projeto_final.ipynb  READ.ME.txt
Seguidor_de_linha/: README.md  instalando_git.md
Seguidor_de_linha/arduino/: README.md  arduino.h  arduino.ino  arduino_carlos.ino
Seguidor_de_linha/arduino/Versoes_Diferentes/: arduino_Carlos_V4.h  (+10 more)
Seguidor_de_linha/bitDogLab/: CMakeLists.txt  README.md  bitDogLab.c  bitDogLab_backup.c  bitDogLab_teste1_carlos.c
(+58 files in other folders)
